- Fixed wxSocketBase::InterruptWait on wxBase.
- Important code cleanup (Paul Cornett)
- Added support for wxLongLong in wx stream classes (Mark Junker)
- wxSOCKET_REUSEADDR can be used with wxSocketClient.
- Overloaded Connect and SetLocal methods for binding to local address/port.

All (GUI):

- Added wxTreebook (uses a wxTreeCtrl to control pages).
- Added wxKeyEvent::GetModifiers()
- Added wxDialog::SetEscapeId().
- wxItemContainerImmutable::FindString unified (affects wxRadioBox, wxListBox,
  wxComboBox and wxChoice).
- wxWindow::Fit() now works correctly for frames and dialogs too.
- Added access to the border size between pages and controller in book
  based controls (wxBookCtrlBase::Get/SetInternalBorder).
- Added initial wxRichTextCtrl implementation.
- All book based controls (notebook, treebook etc.) share now the same
  options for orientation (wxBK_TOP, wxBK_DEFAULT, ...) instead of duplicated
  wxLB_TOP, wxNB_TOP, wxCHB_TOP, wxTBK_TOP.
- Added parent window parameter to wxHelpController constructor
  and added SetParentWindow/GetParentWindow.
- wxMultiChoiceDialog uses now wxCheckListBox if possible, wxListBox if not.
- Added wxBitmapButton::SetHoverBitmap()
- Access to titles through Get/SetTitle is available now only for top level
  windows (wxDialog, wxFrame).
- Fixed memory leak of pending events in wxEvtHandler
- Added wxRadioBox::IsItemEnabled/Shown()
- Added space after list item number in wxHTML.
- Implemented <sub> and <sup> handling in wxHTML (based on patch
  by Sandro Sigala)
- Added caption parameter to wxGetFontFromUser and wxGetColourFromUser.
- Added wxGetMouseState function.
- Added wxHtmlHelpWindow, wxHtmlHelpDialog and wxHtmlModalHelp classes,
  allowing HTML help to be embedded in an application.
- wxCalendarCtrl positioning and hit-testing fixes for dimensions other than
  best size.
- wxCalendarCtrl colour schema changed and adjusted to system settings.
- More checking of image validity before loading into wxImage.